package system;

public interface Repo <T> {

    void create(T t);

}